<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.ListFragment">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/group_list_header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/group_list_header"
        android:textSize="@dimen/list_text_view_text_size"
        android:paddingHorizontal="@dimen/list_padding_horizontal"
        android:background="@color/ListTitleBoxColor"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/create_new_group_list_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_new_group_list_button"
        android:textSize="@dimen/list_button_text_size"
        android:stateListAnimator="@null"
        android:elevation="@dimen/main_button_text_elevation"
        android:layout_marginHorizontal="@dimen/list_button_margin_horizontal"
        app:layout_constraintTop_toBottomOf="@id/group_list_header"
        app:layout_constraintEnd_toStartOf="@id/import_from_excel_button"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/import_from_excel_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/import_from_excel_button"
        android:textSize="@dimen/list_button_text_size"
        android:stateListAnimator="@null"
        android:elevation="@dimen/main_button_text_elevation"
        android:layout_marginHorizontal="@dimen/list_button_margin_horizontal"
        app:layout_constraintTop_toBottomOf="@id/group_list_header"
        app:layout_constraintStart_toEndOf="@id/create_new_group_list_button"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/group_list_no_item_text"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/group_list_no_item_text"
        android:textSize="@dimen/list_text_view_sub_text_size"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="@id/group_list_recycler_view"
        app:layout_constraintStart_toStartOf="@id/group_list_recycler_view"
        app:layout_constraintEnd_toEndOf="@id/group_list_recycler_view"
        app:layout_constraintBottom_toBottomOf="@id/group_list_recycler_view"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/group_list_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/list_group_list_layout_height"
        android:background="@drawable/border"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@id/create_new_group_list_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/member_list_header"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/member_list_header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/member_list_header"
        android:textSize="@dimen/list_text_view_text_size"
        android:paddingHorizontal="@dimen/list_padding_horizontal"
        android:background="@color/ListTitleBoxColor"
        app:layout_constraintTop_toBottomOf="@id/group_list_recycler_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/member_list_no_item_text"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/member_list_no_item_text"
        android:textSize="@dimen/list_text_view_sub_text_size"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="@id/member_list_recycler_view"
        app:layout_constraintStart_toStartOf="@id/member_list_recycler_view"
        app:layout_constraintBottom_toBottomOf="@id/member_list_recycler_view"
        app:layout_constraintEnd_toEndOf="@id/member_list_recycler_view"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/member_list_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/border"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@id/member_list_header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>