<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="groupViewModel"
            type="com.yuoyama12.decidepickingorderapp.viewmodels.GroupViewModel" />
        <variable
            name="orderViewModel"
            type="com.yuoyama12.decidepickingorderapp.viewmodels.OrderViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.MainFragment">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/no_group_notification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_group_notification_text"
            android:textAppearance="?attr/textAppearanceSubtitle2"
            android:gravity="bottom"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/start_picking_order_button"/>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/start_picking_order_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/start_picking_order_button"
            android:elevation="@dimen/main_button_text_elevation"
            android:textSize="@dimen/main_button_text_size"
            android:paddingVertical="@dimen/main_button_vertical_padding"
            android:paddingHorizontal="40dp"
            android:stateListAnimator="@null"
            android:layout_marginHorizontal="@dimen/main_button_layout_margin_horizontal"
            android:enabled="@{groupViewModel.hasAnyGroupsInGroupList}"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/show_list_button" />

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/ascending_order_check_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ascending_order_check_box"
            android:textSize="@dimen/main_check_box_text_size"
            android:checked="@={orderViewModel.ascendingOrderCheckState}"
            app:layout_constraintTop_toBottomOf="@id/start_picking_order_button"
            app:layout_constraintEnd_toEndOf="@id/start_picking_order_button" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/show_list_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/show_list_button"
            android:elevation="@dimen/main_button_text_elevation"
            android:textSize="@dimen/main_button_text_size"
            android:paddingVertical="@dimen/main_button_vertical_padding"
            android:paddingHorizontal="30dp"
            android:stateListAnimator="@null"
            android:layout_marginHorizontal="@dimen/main_button_layout_margin_horizontal"
            app:layout_constraintTop_toBottomOf="@id/start_picking_order_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>